crates/solidity/testing/snapshots/bindings_output/contracts/virtual_methods/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[input.sol:5:27]
   │
 5 │ ╭─▶     function foo() public pure virtual returns (string memory) {
   ┆ ┆   
 7 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:11:27]
    │
 11 │ ╭─▶     function foo() public pure virtual override(A) returns (string memory) {
    ┆ ┆   
 13 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:17:27]
    │
 17 │ ╭─▶     function foo() public pure virtual override returns (string memory) {
    ┆ ┆   
 19 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:24:27]
    │
 24 │ ╭─▶     function foo() public pure override(B, C) returns (string memory) {
    ┆ ┆   
 26 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  4 │ contract A {
    │          ┬  
    │          ╰── def: 1
  5 │     function foo() public pure virtual returns (string memory) {
    │              ─┬─  
    │               ╰─── def: 2
    │ 
 10 │ contract B is A {
    │          ┬    ┬  
    │          ╰─────── def: 3
    │               │  
    │               ╰── ref: 1
 11 │     function foo() public pure virtual override(A) returns (string memory) {
    │              ─┬─  
    │               ╰─── def: 4
    │ 
 16 │ contract C is A {
    │          ┬    ┬  
    │          ╰─────── def: 5
    │               │  
    │               ╰── ref: 1
 17 │     function foo() public pure virtual override returns (string memory) {
    │              ─┬─  
    │               ╰─── def: 6
    │ 
 22 │ contract D is B, C {
    │          ┬    ┬  ┬  
    │          ╰────────── def: 7
    │               │  │  
    │               ╰───── ref: 3
    │                  │  
    │                  ╰── ref: 5
    │ 
 24 │     function foo() public pure override(B, C) returns (string memory) {
    │              ─┬─  
    │               ╰─── def: 8
────╯
